--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "start-stop-instances"
-version = "0.1.1"
+version = "0.2.0"
 description = ""
 authors = ["Abhinav Chaturvedi <achaturvedi@calance.com>"]
 readme = "README.md"
@@ -11,6 +11,7 @@ python = "^3.8"
 typer = "^0.9.0"
 boto3 = "^1.28.25"
 python-dotenv = "^1.0.0"
+tabulate = "^0.9.0"
 
 
 [build-system]
